--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,9 @@
+:root {
+  --foreground: #555555;
+  --background: #f8f8f8;
+  --accent-1: #ffffff;
+}
+
 a {
   color: inherit;
   text-decoration: none;
