--- a/components/ColorPicker.module.scss
+++ b/components/ColorPicker.module.scss
@@ -18,7 +18,7 @@
   display: grid;
   gap: 0.25rem;
   grid-template-columns: 1fr 1fr 1fr;
-  padding: 1rem 1.75rem;
+  padding: 1rem;
   text-align: center;
 }
 
