--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,12 @@
 .root {
-  background-color: #f8f8f8;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  min-height: 100vh;
+  background-color: var(--background);
+  color: var(--foreground);
   padding: 0 1rem;
+}
+
+.base {
+  margin: auto;
+  max-width: 768px;
+  min-height: calc(100vh - 118px);
+  width: 100%;
 }
